z-index fix: Moved Stepvisualizer-character to 0, LocationDiv, StepVisualizer-progress, AddProgressDiv to 1

--- a/components/StepVisualizer.css
+++ b/components/StepVisualizer.css
@@ -15,7 +15,7 @@
   background-repeat: no-repeat;
   overflow: hidden;
 
-  font-family: "Pixelify Sans", serif;
+  /* font-family: "Pixelify Sans", serif; */
   font-optical-sizing: auto;
   font-style: normal;
 
@@ -23,6 +23,7 @@
 }
 
 .StepVisualizer-character {
+  z-index: 0;
   position: absolute;
   top: 44%;
   transform: translate(-50%, -50%);
@@ -33,13 +34,13 @@
 .LocationDiv,
 .StepVisualizer-progress,
 .AddProgressDiv {
+  z-index: 1;
   flex: 1; /* Allow divs to grow and shrink evenly */
   min-width: 280px; /* Ensure minimum width */
   max-width: 300px; /* Optional limit for width */
   text-align: center; /* Center-align content within each div */
   margin: 0 auto;
 }
-
 
 .StepVisualizer-textbackground {
   margin: 0 auto;
